...
/* Class = "UILabel"; text = "Detail"; ObjectID = "1wj-zg-9oV"; */
"1wj-zg-9oV.text" = "Detail";

/* Class = "UILabel"; text = "Server"; ObjectID = "2qU-7N-kPu"; */
"2qU-7N-kPu.text" = "Server";

/* Class = "UIButton"; normalTitle = "START"; ObjectID = "35n-Vl-qyD"; */
"35n-Vl-qyD.normalTitle" = "START";

/* Class = "UILabel"; text = "Title"; ObjectID = "4kq-Fq-gUs"; */
"4kq-Fq-gUs.text" = "Title";

/* Class = "UILabel"; text = "Enable QOS measurements"; ObjectID = "55W-6A-5E8"; */
...
/* Class = "UILabel"; text = "Title"; ObjectID = "aIk-cV-ooV"; */
"aIk-cV-ooV.text" = "Title";

/* Class = "UINavigationItem"; title = "Settings"; ObjectID = "arh-ot-uMI"; */
"arh-ot-uMI.title" = "Settings";

/* Class = "UIBarButtonItem"; title = "Continue"; ObjectID = "c1q-i2-cDc"; */
"c1q-i2-cDc.title" = "Continue";

/* Class = "UILabel"; text = "Map"; ObjectID = "cDf-h9-XlL"; */
"cDf-h9-XlL.text" = "Map";

/* Class = "UILabel"; text = "Port"; ObjectID = "cIt-3t-VvV"; */
...
