...
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" label="Test Result View"/>
                    </view>
                    <navigationItem key="navigationItem" title="Test Result" id="DA6-8e-Uvp">
                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="OZt-Eg-Yfv">
                            <connections>
                                <action selector="share:" destination="FpZ-r8-sz4" id="30g-Ve-w76"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
